--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -64,6 +64,7 @@ src/wmwinmenu.cc
 src/yapp.cc
 src/yarray.cc
 src/ybutton.cc
+src/ycmdline.cc
 src/yconfig.cc
 src/ycursor.cc
 src/ydialog.cc
@@ -71,11 +72,13 @@ src/yfont.cc
 src/yfontcore.cc
 src/yfontxft.cc
 src/yicon.cc
+src/yimage.cc
 src/yimage_gdk.cc
 src/yimage_imlib.cc
 src/yimage_xpm.cc
 src/yinput.cc
 src/ylabel.cc
+src/ylibrary.cc
 src/ylistbox.cc
 src/ylocale.cc
 src/ymenu.cc
@@ -84,6 +87,7 @@ src/ymsgbox.cc
 src/ypaint.cc
 src/ypaths.cc
 src/ypipereader.cc
+src/ypixbuf.cc
 src/ypixmap.cc
 src/ypopup.cc
 src/yprefs.cc
