add icewm-session manual page to makefile

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,14 +1,16 @@
 
 icewm_man_files = \
 	icewm.man \
-	icewmbg.man
+	icewmbg.man \
+	icewm-session.man
 
 dist_man1_MANS = $(icewm_man_files)
 DISTCLEANFILES = $(icewm_man_files)
 
 EXTRA_DIST = \
 	icewm.pod \
-	icewmbg.pod
+	icewmbg.pod \
+	icewm-session.pod
 
 SUFFIXES = .man .pod
 
