add icewmtray manual page to makefile

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -2,7 +2,8 @@
 icewm_man_files = \
 	icewm.man \
 	icewmbg.man \
-	icewm-session.man
+	icewm-session.man \
+	icewmtray.man
 
 dist_man1_MANS = $(icewm_man_files)
 DISTCLEANFILES = $(icewm_man_files)
@@ -10,7 +11,8 @@ DISTCLEANFILES = $(icewm_man_files)
 EXTRA_DIST = \
 	icewm.pod \
 	icewmbg.pod \
-	icewm-session.pod
+	icewm-session.pod \
+	icewmtray.pod
 
 SUFFIXES = .man .pod
 
