asciidoc make poor manual pages

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,8 +1,5 @@
 
-SUFFIXES = .1 .1.adoc .adoc .html
-
-.1.adoc.1:
-	$(ASCIIMAN) $(ASCIIMAN_FORMAT) $<
+SUFFIXES = .adoc .html
 
 .adoc.html:
 	$(ASCIIDOC) $(ASCIIDOC_BACKEND) $<
@@ -13,14 +10,6 @@ html_documentation = \
 	icewmbg.1.html \
 	icesound.1.html
 
-generated_manpages = \
-	icewm.1 \
-	icewmbg.1 \
-	icesound.1
-
-dist_man1_MANS = \
-	$(generated_manpages)
-
 EXTRA_DIST = \
 	icewm.adoc \
 	icewm.1.adoc \
@@ -30,5 +19,5 @@ EXTRA_DIST = \
 dist_doc_DATA = \
 	$(html_documentation)
 
-DISTCLEANFILES = $(html_documentation) $(generated_manpages)
+DISTCLEANFILES = $(html_documentation)
 
