conditionally install utility manual pages

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,17 +1,36 @@
 
 icewm_man1_files = \
-	icehelp.man \
 	icesh.man \
-	icesound.man \
 	icewmbg.man \
 	icewmhint.man \
 	icewm.man \
-	icewm-menu-fdo.man \
 	icewm-session.man \
 	icewm-set-gnomewm.man \
 	icewmtray.man
 
+extra_man1_files = \
+	icehelp.man \
+	icesound.man \
+	icewm-menu-fdo.man \
+	icewm-menu-gnome2.man
+
 dist_man1_MANS = $(icewm_man1_files)
+
+if BUILD_HELP
+dist_man1_MANS += icehelp.man
+endif
+
+if BUILD_SOUND
+dist_man1_MANS += icesound.man
+endif
+
+if BUILD_MENU_FDO
+dist_man1_MANS += icewm-menu-fdo.man
+endif
+
+if BUILD_MENU_GNOME2
+dist_man1_MANS += icewm-menu-gnome2.man
+endif
 
 icewm_man5_files = \
 	icewm-env.man \
@@ -29,9 +48,10 @@ icewm_man5_files = \
 
 dist_man5_MANS = $(icewm_man5_files)
 
-DISTCLEANFILES = $(icewm_man1_files) $(icewm_man5_files)
+DISTCLEANFILES = $(icewm_man1_files) $(extra_man1_files) $(icewm_man5_files)
 
 EXTRA_DIST = \
+	$(extra_man1_files) \
 	icehelp.pod \
 	icesh.pod \
 	icesound.pod \
@@ -41,6 +61,7 @@ EXTRA_DIST = \
 	icewmhint.pod \
 	icewm-keys.pod \
 	icewm-menu-fdo.pod \
+	icewm-menu-gnome2.pod \
 	icewm-menu.pod \
 	icewm.pod \
 	icewm-preferences.pod \
@@ -55,7 +76,7 @@ EXTRA_DIST = \
 	icewmtray.pod \
 	icewm-winoptions.pod
 
-$(icewm_man1_files): %.man: %.pod
+$(icewm_man1_files) $(extra_man1_files): %.man: %.pod
 	$(AM_V_GEN)pod2man --center="User Commands" \
 		--date="$(DATE)" \
 		--errors="none" \
