Dynamic network devices mostly working
Lookup dictionary not used for now, kept for possible optimization in
future.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -335,7 +335,7 @@ endforeach()
 
 SET(ICE_COMMON_SRCS mstring.cc udir.cc upath.cc yapp.cc yxapp.cc ytimer.cc
  ywindow.cc ypaint.cc ypopup.cc misc.cc ycursor.cc ysocket.cc ypaths.cc
- ylocale.cc yarray.cc ycollections.h ypipereader.cc yxembed.cc yconfig.cc
+ ylocale.cc yarray.cc ycollections.cc ypipereader.cc yxembed.cc yconfig.cc
  yprefs.cc yfont.cc ypixmap.cc
  yimage_gdk.cc yimage_imlib.cc yimage_xpm.cc ytooltip.cc)
 
