[cmake] clean linker list explicitly if user disabled some audio backend
Also add sndfile check even with esd, and check OSS header only if OSS
use requested.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -140,7 +140,6 @@ CHECK_INCLUDE_FILE_CXX(sys/file.h HAVE_SYS_FILE_H)
 CHECK_INCLUDE_FILE_CXX(sys/ioctl.h HAVE_SYS_IOCTL_H)
 CHECK_INCLUDE_FILE_CXX(sys/param.h HAVE_SYS_PARAM_H)
 CHECK_INCLUDE_FILE_CXX(sys/socket.h HAVE_SYS_SOCKET_H)
-CHECK_INCLUDE_FILE_CXX(sys/soundcard.h HAVE_SYS_SOUNDCARD_H)
 CHECK_INCLUDE_FILE_CXX(sys/time.h HAVE_SYS_TIME_H)
 CHECK_INCLUDE_FILE_CXX(unistd.h HAVE_UNISTD_H)
 CHECK_INCLUDE_FILE_CXX(wchar.h HAVE_WCHAR_H)
@@ -220,18 +219,23 @@ if(CONFIG_GUIEVENTS)
 	string(TOLOWER ${ICESOUND} ICESOUND)
 	message(STATUS "Checking audio subsystems from ${ICESOUND}")
 	if("${ICESOUND}" MATCHES "alsa")
+        set(alsa_LDFLAGS "")
 		pkg_check_modules(alsa sndfile alsa)
 		set(ENABLE_ALSA "${alsa_FOUND}")
 	endif()
 	if("${ICESOUND}" MATCHES "ao")
+                set(ao_LDFLAGS "")
 		pkg_check_modules(ao sndfile ao)
                 set(ENABLE_AO "${ao_FOUND}")
 	endif()
 	if("${ICESOUND}" MATCHES "esound|esd")
-		pkg_check_modules(esd esound)
+                set(esd_LDFLAGS "")
+		pkg_check_modules(esd sndfile esound)
 		set(ENABLE_ESD "${esd_FOUND}")
 	endif()
 	if("${ICESOUND}" MATCHES "oss")
+                set(oss_LDFLAGS "")
+                CHECK_INCLUDE_FILE_CXX(sys/soundcard.h HAVE_SYS_SOUNDCARD_H)
 		pkg_check_modules(oss sndfile)
 		set(ENABLE_OSS "${oss_FOUND}")
 	endif()
