Untangle selection of audio libs parameters
Fix build failure when building without esd or alsa or both

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -217,28 +217,63 @@ option(CONFIG_GUIEVENTS "Define to enable GUI events for audio" off)
 set(ICESOUND "ALSA,AO,OSS,ESound" CACHE STRING "List of supported audio subsystems")
 if(CONFIG_GUIEVENTS)
 	string(TOLOWER ${ICESOUND} ICESOUND)
-	message(STATUS "Checking audio subsystems from ${ICESOUND}")
-	if("${ICESOUND}" MATCHES "alsa")
-        set(alsa_LDFLAGS "")
-		pkg_check_modules(alsa sndfile alsa)
-		set(ENABLE_ALSA "${alsa_FOUND}")
-	endif()
-	if("${ICESOUND}" MATCHES "ao")
-                set(ao_LDFLAGS "")
-		pkg_check_modules(ao sndfile ao)
-                set(ENABLE_AO "${ao_FOUND}")
-	endif()
-	if("${ICESOUND}" MATCHES "esound|esd")
-                set(esd_LDFLAGS "")
-		pkg_check_modules(esd sndfile esound)
-		set(ENABLE_ESD "${esd_FOUND}")
-	endif()
-	if("${ICESOUND}" MATCHES "oss")
-                set(oss_LDFLAGS "")
-                CHECK_INCLUDE_FILE_CXX(sys/soundcard.h HAVE_SYS_SOUNDCARD_H)
-		pkg_check_modules(oss sndfile)
-		set(ENABLE_OSS "${oss_FOUND}")
-	endif()
+        message(STATUS "Checking audio subsystems from ICESOUND: ${ICESOUND}")
+
+        #clear cache
+        set(ENABLE_ALSA off)
+        set(ENABLE_AO off)
+        set(ENABLE_ESD off)
+        set(ENABLE_OSS off)
+        set(audio_libs )
+        set(audio_flags )
+        # Triggers some cmake bug, use copy-pasta for now
+        #macro(_addsnd varname flagname)
+        #        set("${FLAGNAME}" "${${varname}_FOUND}")
+        #        if("${${varname}_FOUND}" EQUAL 1)
+        #                list(APPEND audio_libs "${${varname}_LDFLAGS}" "${${varname}_LIBS}")
+        #                list(APPEND audio_flags "${${varname}_CFLAGS}")
+        #        endif()
+        #endmacro()
+
+        pkg_check_modules(sndfile sndfile)
+        if(sndfile_FOUND)
+                if(sndfile_FOUND)
+                        list(APPEND audio_flags "${sndfile_CFLAGS}")
+                        list(APPEND audio_libs ${sndfile_LDFLAGS})
+                        list(APPEND audio_libs ${sndfile_LIBS})
+                endif()
+                if("${ICESOUND}" MATCHES "alsa")
+                        pkg_check_modules(alsa alsa)
+                        set(ENABLE_ALSA "${alsa_FOUND}")
+                        if(alsa_FOUND)
+                                list(APPEND audio_flags "${alsa_CFLAGS}")
+                                list(APPEND audio_libs ${alsa_LDFLAGS})
+                                list(APPEND audio_libs ${alsa_LIBS})
+                        endif()
+                endif()
+                if("${ICESOUND}" MATCHES "ao")
+                        pkg_check_modules(ao ao)
+                        set(ENABLE_AO "${ao_FOUND}")
+                if(ao_FOUND)
+                        list(APPEND audio_flags "${ao_CFLAGS}")
+                        list(APPEND audio_libs ${ao_LDFLAGS})
+                        list(APPEND audio_libs ${ao_LIBS})
+                endif()
+                endif()
+                if("${ICESOUND}" MATCHES "esound|esd")
+                        pkg_check_modules(esd esound)
+                        set(ENABLE_ESD "${esd_FOUND}")
+                if(esd_FOUND)
+                        list(APPEND audio_flags "${esd_CFLAGS}")
+                        list(APPEND audio_libs ${esd_LDFLAGS})
+                        list(APPEND audio_libs ${esd_LIBS})
+                endif()
+                endif()
+                if("${ICESOUND}" MATCHES "oss")
+                        CHECK_INCLUDE_FILE_CXX(sys/soundcard.h HAVE_SYS_SOUNDCARD_H)
+                        set(ENABLE_OSS "${oss_FOUND}") # source will undef if now header present
+                endif()
+        endif(sndfile_FOUND)
 endif()
 
 option(XINERAMA "Define to enable Xinerama support" on)
@@ -398,8 +433,8 @@ TARGET_LINK_LIBRARIES(icewmbg${EXEEXT} ${xext_LDFLAGS} ${x11_LDFLAGS} ${xft_LDFL
 
 IF(CONFIG_GUIEVENTS AND (ENABLE_ALSA OR ENABLE_AO OR ENABLE_ESD OR ENABLE_OSS))
 ADD_EXECUTABLE(icesound${EXEEXT} icesound.cc upath.cc misc.cc mstring.cc ytimer.cc yapp.cc yprefs.cc yarray.cc ref.cc)
-SET_TARGET_PROPERTIES(icesound${EXEEXT} PROPERTIES COMPILE_FLAGS "${CXXFLAGS_COMMON} ${icewm_pc_flags}")
-TARGET_LINK_LIBRARIES(icesound${EXEEXT} ${xext_LDFLAGS} ${x11_LDFLAGS} ${nls_LIBS} ${alsa_LDFLAGS} ${ao_LDFLAGS} ${esd_LDFLAGS} ${oss_LDFLAGS} ${EXTRA_LIBS})
+SET_TARGET_PROPERTIES(icesound${EXEEXT} PROPERTIES COMPILE_FLAGS "${CXXFLAGS_COMMON} ${icewm_pc_flags} ${audio_flags}")
+TARGET_LINK_LIBRARIES(icesound${EXEEXT} ${xext_LDFLAGS} ${x11_LDFLAGS} ${nls_LIBS} ${audio_libs} ${EXTRA_LIBS})
 INSTALL(TARGETS icesound${EXEEXT} DESTINATION ${BINDIR})
 ENDIF()
 
