--- a/lib/keys.in
+++ b/lib/keys.in
@@ -29,3 +29,5 @@ key "XF86HomePage"			xdg-open about:blank
 key "XF86Search"			xdg-open http://www.google.com
 key "XF86Eject"				eject
 key "XF86Calculator"			/bin/sh -c "gnome-calculator || xcalc || ( type bc >/dev/null 2>&1 && xterm -e bc -l)"
+
+switchkey "Super+p"			icewm-menu-xrandr
