added script to AM_INSTALLCHECK_STD_OPTIONS_EXEMPT
- when distributing a script or program that does not support
  --help and --version options (or doen't support them properly,
  such as printing to standard error instead of standard out),
  they must be added to AM_INSTALLCHECK_STD_OPTIONS_EXEMPT to
  pass the distcheck target.

--- a/Makefile.am
+++ b/Makefile.am
@@ -109,3 +109,6 @@ dist_bin_SCRIPTS = \
 	icewm-set-gnomewm \
 	contrib/icewm-menu-xrandr
 
+AM_INSTALLCHECK_STD_OPTIONS_EXEMPT = \
+	contrib/icewm-menu-xrandr
+
